added default vars and reset

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import './styles/reset.css';
+@import './styles/vars.css';
+
+
 body {
   margin: 0;
   padding: 0;
@@ -8,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   a {
-  	color: white!important;
+  	color: notification!important;
   }
 }
 
