--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,6 @@
 @import './styles/reset.css';
 @import './styles/vars.css';
-
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  a {
-  	color: notification!important;
-  }
-}
+@import './styles/fonts.css';
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
